--- a/style.css
+++ b/style.css
@@ -266,10 +266,10 @@ section{
         text-align: center;
     }
     .main-container.image img{
-        width:min(100%,320px);
+        width:100%;
         height: auto;
-        max-width: 300px;
-        display:inline-block;
+        max-width:100%;
+        display:block;
         margin: 0 auto;
     }
 }
